# xpress-calc

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust-web-pages.yml
src/: compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty.rs  tokenizer.rs  vm.rs
web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
web/public/: browserconfig.xml  serviceworker.js  site.webmanifest
web/src/: app.rs  main.rs
web/src/app/: browser_sys.rs  menu.rs
