[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.65"
serde_json = "1.0.108"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.65", features = ["Element", "Navigator"] }
xpress-calc = { path = ".." }
yew = { version = "0.21.0", features = ["csr"] }
